fix team dialog size on mobile

--- a/src/sass/60_components/_components.dialog.scss
+++ b/src/sass/60_components/_components.dialog.scss
@@ -101,9 +101,10 @@
 }
 
 .c-dialog.--team-dialog {
-  max-width: 100vw;
-  width: 100vw;
-  max-height: calc(100vh - 80px);
+  max-width: 100dvw;
+  width: 100dvw;
+  max-height: calc(100dvh - 48px);
+  height: calc(100dvh - 48px);
   margin-top: 40px;
   margin-bottom: 40px;
 
@@ -111,7 +112,8 @@
     max-width: calc(100vw - 2rem);
     width: unset;
     max-height: calc(100dvh - 2rem);
-    margin: auto
+    height: unset;
+    margin: auto;
   }
 
   @include media-breakpoint-up(lg) {
